# workstudio-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: chat_with_agent.py  fastapi_integration.py  run_workflow.py
tests/: __init__.py  test_sdk.py
workstudio/: __init__.py  _http.py  agents.py  client.py  exceptions.py  models.py  py.typed  workflows.py
