[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workstudio"
version = "0.1.0"
description = "Python SDK for work.studio - AI-powered workflow automation platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SpaceVox Inc", email = "developers@spacevox.com" }
]
keywords = [
    "workflow",
    "automation", 
    "ai",
    "agents",
    "work.studio",
    "spacevox"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://work.studio"
Documentation = "https://docs.work.studio/sdk/python"
Repository = "https://github.com/pooja-spacevox/workstudio-python"
Issues = "https://github.com/pooja-spacevox/workstudio-python/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/workstudio",
]

[tool.hatch.build.targets.wheel]
packages = ["workstudio"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
